--- a/project.yaml
+++ b/project.yaml
@@ -12,7 +12,7 @@ network:
 dataSources:
   - name: main
     kind: substrate/Runtime
-    startBlock: 800000
+    startBlock: 8000000
     mapping:
       file: ./dist/index.js
       handlers:
